# arxivscraper

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  setup.py
arxivscraper/: __init__.py  analyzer.py  cli.py  scraper.py
tests/: test_arxivscraper.py
