[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxivscraper"
version = "0.1.0"
description = "Tool for scraping arXiv papers and extracting LaTeX content"
readme = "README.md"
authors = [
    {name = "arXiv Scraper Developer"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
keywords = ["arxiv", "latex", "scraper", "dataset", "research", "papers"]
dependencies = [
    "arxiv>=1.4.7",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "wordcloud>=1.8.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/arxivscraper"
"Bug Tracker" = "https://github.com/yourusername/arxivscraper/issues"

[project.scripts]
arxivscraper = "arxivscraper.cli:main"

[tool.setuptools]
packages = ["arxivscraper"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true